serviceability/sa/TestUniverse.java#id0 crashes with EpsilonGC and AOT

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11, 12
    • Component/s: hotspot
    • gc
    • b23

        This test crashes every night in our nightlies. Here is an easy way to reproduce the issue:

        $ ./build/macosx-x86_64-normal-server-release/images/jdk/bin/jaotc -J-XX:+UseParallelGC --info HelloWorld.class
        Compiling unnamed.dylib...
        1 classes found (158 ms)
        2 methods total, 2 methods to compile (24 ms)
        Compiling with 4 threads
        .
        2 methods compiled, 0 methods failed (2360 ms)
        Parsing compiled code (5 ms)
        Processing metadata (23 ms)
        Preparing stubs binary (1 ms)
        Preparing compiled binary (0 ms)
        Creating binary: unnamed.o (62 ms)
        Creating shared library: unnamed.dylib (37 ms)
        Total time: 5129 ms
        $ java -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -XX:+UseAOT -XX:AOTLibrary=unnamed.dylib -XX:+PrintAOT HelloWorld
             13 1 loaded unnamed.dylib aot library
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x0000000103023862, pid=67382, tid=8707
        #
        # JRE version: (11.0) (build )
        # Java VM: OpenJDK 64-Bit Server VM (11-internal+0-adhoc.cthalinger.jdk, mixed mode, aot, tiered, compressed oops, epsilon gc, bsd-amd64)
        # Problematic frame:
        # V [libjvm.dylib+0x1e8862] _Z21ci_card_table_addressv+0x12
        #
        # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # An error report file with more information is saved as:
        # /Users/cthalinger/jdk/hs_err_pid67382.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Abort trap: 6

              Assignee:
              Aleksey Shipilev
              Reporter:
              Christian Thalinger (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: