8207006: serviceability/sa/TestUniverse.java#id0 crashes with EpsilonGC and AOT

Reviewed-by: twisti, kvn